updated readabilty in product html pages and resolved issue img not showing on index page

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -9,7 +9,7 @@ html {
 }
 
 body {
-    background: url('static/media/pexels-jill-wellington-39351.jpg') no-repeat center center fixed;
+    background: url('/static/media/pexels-jill-wellington-39351.jpg') no-repeat center center fixed;
     background-size: cover;
     height: calc(100vh - 164px);
     color: #555;
